examples/test/testpolicy15412.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15412
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key31: value13
      key26: value33
      key12: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value35
          key39: value41
      podSelector:
        matchLabels:
          key23: value13
          key2: value17
